Thu May 19 00:38:46 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* config-g++-common.h:
	* config-lite.h:

	  Removed ACE_EXPORT_SINGLETON_{DECLARATION,DECLARE} macro
	  definitions.  They do not provide the expected behavior in g++
	  4.0 configurations, as they do in VC++ configurations.

Wed May 18 16:19:32 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/ATM_Addr.cpp:
	* ace/ATM_Addr.inl:
	* ace/DEV_Addr.cpp:
	* ace/DEV_Addr.inl:
	* ace/FILE_Addr.cpp:
	* ace/FILE_Addr.inl:
	* ace/INET_Addr.cpp:
	* ace/INET_Addr.inl:
	* ace/MEM_Addr.cpp:
	* ace/MEM_Addr.inl:
	* ace/SPIPE_Addr.cpp:
	* ace/SPIPE_Addr.inl:
	* ace/Service_Types.cpp:
	* ace/Service_Types.inl:
	* ace/UNIX_Addr.cpp:
	* ace/UNIX_Addr.inl:

	  Moved virtual method implementation out-of-line.  Since the
	  classes to which they belong are exported, inlining them will
	  cause problems when attempting to perform a dynamic_cast<> in
	  binaries built with g++ 4.0's -fvisibility-inlines-hidden
	  command line option.

	* ace/Strategies_T.cpp (dump):

	  Removed ACE_INLINE from this out of line method.

Wed May 18 15:44:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/Semaphore.cpp:

          Removed check for missing shm_open() since this causes problems
          for platforms supporting POSIX_SEM (and thus not using
	  shm_open/open).  Thanks to Raoul Gough <Raoul dot Gough at liffe
	  dot com> for reporting this.

        * ace/config-openvms.h:
          Added ACE_LACKS_UNNAMED_SEMAPHORE to compensate for above
	  change.

Wed May 18 14:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/ASX/Message_Queue/buffer_stream.cpp:
          Initialise all pointers with 0

Wed May 18 09:25:35 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:
        * include/makeinclude/rules.lib.GNU:
        * include/makeinclude/platform_gnuwin32_common.GNU:
